<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>acomms_msgs</name>
  <version>0.0.0</version>
  <description>The acomms_msgs package</description>

  <maintainer email="linzhao@uri.edu">Lin Zhao</maintainer>
  <author email="linzhao@uri.edu">Lin Zhao</author>
  <author email="croman2@uri.edu">Chris Roman</author>
  <author email="mzhou@uri.edu">Mingxi Zhou</author>

  <license>which one</license>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>


  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
